# Meron_Gedrago_mini_Week7

./: README.md
sqlite/: Cargo.toml  my_database.db
sqlite/src/: lib.rs  main.rs
sqlite/test/: test.rs
