[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "sqlite"
path = "src/main.rs"

[dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
rusqlite = "^0.29"
csv = "^1.0"
assert_cmd = "^2.0"
predicates = "0.9"
clap = { version = "4.5.20", features = ["derive"] }

